# cdds-rust

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
dds/: Cargo.toml  build.rs
dds/src/: lib.rs
example/: Cargo.toml  pub.rs
examples/: Cargo.toml  discoverer.rs  pub.rs
libddsc-sys/: Cargo.toml  build.rs  lib.rs  wrapper.h
libddsc-sys/src/: lib.rs
serda/: Makefile  blob-subscriber.c  loan-subscriber.c  publisher.c  subscriber.c
src/: lib.rs
